[FIX] temp fix label text align issue

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -466,3 +466,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 40px;
 }
 
+.control-label.align-left {
+  text-align: left;
+}
